SMS threading issue fixed
Each data entry now sent as individual SMS message

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,5 +31,12 @@
         </activity>
         <activity android:name=".ComputerMode">
         </activity>
+
+        <receiver android:name=".SmsReceiver">
+            <intent-filter>
+                <action android:name=
+                                "android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
